# JiviX

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bin  lib  lib-mingw-w64  lib-mingw64  lib-vc2019
LEGACY/shaders-hlsl/: glslang-glsl
LEGACY/shaders-hlsl/rtrace/: denoise.comp.hlsl  global.hlsli  index.hlsli  matrix.hlsli  quad.comp.hlsl  rasterize.frag.hlsl  rasterize.vert.hlsl  raytrace.comp.hlsl  raytrace.rmiss.hlsl  transform.vert.hlsl
LEGACY/shaders-sdk/rtrace/: tf.glsl  (+15 more)
examples/gltf-old/: CMakeLists.txt  include  lib  lib-mingw-w64  lib-mingw64  lib-vc2019
examples/gltf-test/: CMakeLists.txt  jar
examples/gltf-test/src/: main.cpp  pch.cpp  pch.hpp
examples/gltf-test/src-lib/: main-12052020.cpp  main-25042020.cpp
examples/gltf-test/vsbuild/: vsbuild.sln  vsbuild.vcxproj  vsbuild.vcxproj.filters
examples/gltf-test/vsbuild/x64/Debug/: vc142.idb
examples/gltf-test/vsbuild/x64/Debug/vsbuild.tlog/: vsbuild.lastbuildstate
examples/obj-test/: CMakeLists.txt  bin
examples/physics/: CMakeLists.txt  lib
examples/triangle/: CMakeLists.txt  bin  include  lib  windows-x86_64
include/: .vscode  GLFW  KHR  epoxy  glm  misc  nlohmann  spirv  spirv-headers  spirv-tools  spirv_cross  vkh  vkt2  vkt3  vma  vulkan  xvk
include/JiviX/: JiviX.hpp  context.hpp  core.hpp  driver.hpp  material.hpp  mesh.hpp  node.hpp  renderer.hpp  thread.hpp
include/lancer/: lancer.hpp
include/lancer-full/: manifest.hpp
include/lancer-vk/: config.hpp  context.hpp  driver.hpp  instance.hpp  lancer.hpp  material.hpp  materials.hpp  mesh-advanced.hpp  mesh.hpp  node.hpp  renderer.hpp  thread.hpp
include/pch/: pch.hpp
include/vkh/: helpers.hpp  structures.hpp
include/vkt/: fw.hpp  structs.hpp  utils.hpp
include/vkt2/: fw.hpp  structs.hpp  test.cpp  utils.hpp  vector.hpp
include/volk/: volk.h
legacy/lib/: glfw3dll.lib
legacy/shaders-sdk/: shaders-list.ps1
lib/: glfw3.lib
native/: lib  lib-mingw-w64  lib-vc2019
native/lib/: cmake  glfw3.lib  glfw3dll.lib  pkgconfig
shaders-hlsl/: dxc-spirv  glslang-hlsl  help.txt  shaders-build.ps1  shaders-list.ps1
shaders-hlsl/dxc/: shaders-build.ps1
shaders-hlsl/glslang/: shaders-build.ps1  shaders-list.ps1
shaders-hlsl/rtrace/: denoise.comp.hlsl  denoise.cs.hlsl  driver.hlsli  global.hlsli  index.hlsli  mapping.frag.hlsl  mapping.geom.hlsl  mapping.ps.hlsl  mapping.vert.hlsl  mapping.vs.hlsl  matrix.hlsli  rasterize.ps.hlsl  rasterize.vert.hlsl  rasterize.vs.hlsl  raytrace.cs.hlsl  raytrace.ds.hlsl  raytrace.hs.hlsl  raytrace.ms.hlsl  raytrace.rchit.hlsl  raytrace.rgen.hlsl  raytrace.rgs.hlsl  raytrace.rs.hlsl  render.ps.hlsl  render.vert.hlsl  render.vs.hlsl  resample.frag.hlsl  resample.geom.hlsl  resample.gs.hlsl  resample.ps.hlsl  resample.vert.hlsl  resample.vs.hlsl  stuff.hlsli  tf.hlsli  transform.geom.hlsl  transform.vert.hlsl  transform.vs.hlsl
shaders-sdk/: GLSLANG.spv  build-for-turing.ps1  comp.spv  dxc-dxil  frag.spv  geom.spv  rchit.spv  rgen.spv  rmiss.spv  shaders-build.ps1  shaders-list.ps1  vert.spv
shaders-sdk/KHR/: global.glsl  pathtrace.rchit  pathtrace.rgen  rasterize.frag  rasterize.vert  raytrace.comp  raytrace.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss
shaders-sdk/NV/: pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss
shaders-sdk/hlsl/: denoise.comp.hlsl  driver.hlsli  fxaa3_11.h  global.hlsli  index.hlsli  mapping.frag.hlsl  mapping.geom.hlsl  mapping.gs.hlsl  mapping.ps.hlsl  mapping.vert.hlsl  quad.comp.hlsl  rasterize.frag.hlsl  rasterize.ps.hlsl  rasterize.vert.hlsl  raytrace-adv-new.hlsli  raytrace-new.hlsli  raytrace.comp.hlsl  raytrace.cs.hlsl  raytrace.rchit.hlsl  raytrace.rgen.hlsl  raytrace.rmiss.hlsl  render.frag.hlsl  render.ps.hlsl  render.vert.hlsl  resample.frag.hlsl  resample.geom.hlsl  resample.gs.hlsl  resample.ps.hlsl  resample.vert.hlsl  resample.vs.hlsl  tf.hlsli  transform.cs.hlsl  transform.geom.hlsl  transform.gs.hlsl  transform.vert.hlsl  transform.vs.hlsl
shaders-sdk/include/: mathlib-compiled.glsl
shaders-sdk/legacy/: rasterize.frag
shaders-sdk/render/: index.glsl  rasterize.frag  rasterize.vert  render.frag  reproject.frag  reproject.vert
shaders-sdk/rtrace/: background-compiled.frag  background.frag  background.vert  denoise.comp  driver.glsl  frag.spv  global.glsl  index-compiled.glsl  index-old.glsl  index.glsl  mapping.frag  mapping.geom  mapping.vert  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  quad-compiled.comp  quad.comp  rasterize-compiled.frag  rasterize-compiled.geom  rasterize-compiled.vert  rasterize.frag  rasterize.geom  rasterize.vert  raytrace-adv-new.glsl  raytrace-adv.glsl  raytrace-new.glsl  raytrace.comp  raytrace.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  rchit.spv  render-compiled.frag  render.frag  render.vert  reproject.frag  reproject.vert  resample-compiled.frag  resample.frag  (+12 more)
shaders-unified/: shaders-build.ps1  shaders-list.ps1
shaders-unified/dxc/: shaders-list.ps1
shaders-unified/dxc-dxil/: shaders-build.ps1  shaders-list.ps1
shaders-unified/dxc-spirv/: shaders-build.ps1  shaders-list.ps1
shaders-unified/glslang-glsl/: shaders-build.ps1  shaders-list.ps1
shaders-unified/include/: ballotlib.glsl  mathlib.glsl
shaders-unified/rtrace/: denoise.comp  denoise.comp.hlsl  driver.hlsli  fxaa3_11.h  global.hlsli  index.hlsli  mapping.frag  mapping.frag.hlsl  mapping.geom  mapping.geom.hlsl  mapping.vert  mapping.vert.hlsl  matrix.hlsli  quad.comp  quad.comp.hlsl  rasterize.frag  rasterize.frag.hlsl  rasterize.vert  rasterize.vert.hlsl  raytrace.comp  raytrace.comp.hlsl  raytrace.rahit  raytrace.rahit.hlsl  raytrace.rchit  raytrace.rchit.hlsl  raytrace.rgen  raytrace.rgen.hlsl  raytrace.rmiss  raytrace.rmiss.hlsl  render.frag  render.frag.hlsl  render.vert  render.vert.hlsl  resample.frag  resample.frag.hlsl  resample.geom  resample.geom.hlsl  resample.vert  resample.vert.hlsl  stuff.hlsli  (+5 more)
src/: glad.c  volk.c
src-lib/: main-12052020.cpp  main-25042020.cpp  main-old.cpp
src/base/: appRenderer.hpp
src/examples/: rtvg.cpp
src/gltf-old/: main-25042020.cpp  main-old.cpp  main.cpp
(+554 files in other folders)
